legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc482/save_st/predcom-8.c-4.8.2-3.out.txt
predcom-8.c: In function ‘is_sorted’:
predcom-8.c:6:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i = 0; i < n - 1; i++)
   ^
predcom-8.c:6:3: note: use option -std=c99 or -std=gnu99 to compile your code
